--- a/roles/dhcp/defaults/main.yml
+++ b/roles/dhcp/defaults/main.yml
@@ -1,3 +1,3 @@
 ---
 mesh_code: ffki
-dns_ips: "{{ip}}, 10.116.136.1, 10.116.144.1, 10.116.160.1, 10.116.168.1, 10.116.176.1, 10.116.184.1, 10.116.192.1"
+dns_ips: "{{ip}}"
